# strife-actix-demo

./: .gitignore  Cargo.toml  README.md  build.rs  input.css  tailwind.config.js
.github/workflows/: rust.yml
public/js/: store.js
src/: main.rs
src/components/: bento.rs  content.rs  expandable.rs  footer.rs  head.rs  hero.rs  image.rs  mod.rs  navigation.rs  text.rs  video.rs
src/extractors/: mod.rs  strife.rs
src/models/: mod.rs  section.rs
src/settings/: env_reader.rs  mod.rs  ravendb.rs
src/views/: mod.rs  sections.rs
