[package]
name = "strife-actix-demo"
version = "1.0.0"
edition = "2024"

[features]
realtime = []

[dependencies]
dotenv = "0.15.0"
base64 = "0.22.1"
actix-web = "4"
actix-files = "0.6.6"
maud = { version = "0.27", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
